Remove generic theming

--- a/example.html
+++ b/example.html
@@ -49,31 +49,39 @@
     <div class="preloader">
       <div class="loaded">&nbsp;</div>
     </div>
-    
+
     <!-- HEADER -->
     <header id="app-header"></header>
-    <script async src="assets/js/header.js"></script>  
+    <script async src="assets/js/header.js"></script>
 
     <section id="bloginner" class="bloginner sections margin-top-120">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="head_title text-center">
-                <p>This website is under construction.</p>
-              </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="head_title text-center">
+              <h2>Examples</h2>
+              <p style="margin-top:30px;">The following are examples from the original theme.</p>
+              <p><a href="example_about.html">about</a></p>
+              <p><a href="example_blog.html">blog</a></p>
+              <p><a href="example_blogpost.html">blogpost</a></p>
+              <p><a href="example_contact.html">contact</a></p>
+              <p><a href="example_index.html">index</a></p>
+              <p><a href="example_service.html">service</a></p>
+              <p><a href="example_service2.html">service2</a></p>
+              <p><a href="example_work.html">work</a></p>
+              <p><a href="example_work2.html">work2</a></p>
             </div>
-            <!-- End of col-sm-12 -->
           </div>
-          <!-- End of row -->
+          <!-- End of col-sm-12 -->
         </div>
-        <!-- End of Container -->
+        <!-- End of row -->
+      </div>
+      <!-- End of Container -->
     </section>
-
 
     <!-- FOOTER -->
     <footer id="app-footer"></footer>
-    <script async src="assets/js/footer.js"></script>  
-    
+    <script async src="assets/js/footer.js"></script>
 
     <!-- START SCROLL TO TOP  -->
 
