--- a/about.html
+++ b/about.html
@@ -5,11 +5,10 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="">
   <!--<![endif]-->
-
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Astronomy on Bluesky - the open-source project</title>
+    <title>Astronomy on Bluesky - About</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
@@ -37,7 +36,6 @@
 
     <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
   </head>
-
   <body data-spy="scroll" data-target=".navbar-collapse">
     <!--[if lt IE 8]>
       <p class="browserupgrade">
@@ -46,28 +44,73 @@
         your experience.
       </p>
     <![endif]-->
-    <div class="preloader">
-      <div class="loaded">&nbsp;</div>
-    </div>
+    <div class="preloader"><div class="loaded">&nbsp;</div></div>
     
     <!-- HEADER -->
     <header id="app-header"></header>
-    <script async src="assets/js/header.js"></script>  
+    <script async src="assets/js/header.js"></script>
 
-    <section id="bloginner" class="bloginner sections margin-top-120">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="head_title text-center">
-                <p>This website is under construction.</p>
+    <!-- About Section -->
+    <section id="aboutus" class="aboutus margin-top-120">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="head_title text-center margin-top-80">
+              <h1>about the project</h1>
+            </div>
+            <!-- End of head title -->
+
+            <div class="main_about_area">
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="signle_about_left">
+                    <img src="assets/images/service3.jpg" alt="" />
+                  </div>
+                </div>
+
+                <div class="col-sm-5 col-sm-push-1">
+                  <div class="single_about">
+                    <div class="separator2"></div>
+                    <p>
+                      Sed ut perspiciatis unde omnis iste natus error sit
+                      voluptatem accusantium doloremque laudantium, totam rem
+                      aperiam, eaque ipsa quae ab illo inventore veritatis et
+                      quasi architecto beatae vitae dicta sunt explicabo.
+                    </p>
+
+                    <p>
+                      Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+                      aut odit aut fugit, sed quia consequuntur magni dolores
+                      eos qui ratione voluptatem sequi nesciunt. Neque porro
+                      quisquam est, qui dolorem ipsum quia dolor sit amet,
+                      consectetur, adipisci velit, sed quia non numquam eius
+                      modi tempora incidunt ut labore et dolore magnam aliquam
+                      quaerat voluptatem.
+                    </p>
+
+                    <p>
+                      Ut enim ad minima veniam, quis nostrum exercitationem
+                      ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
+                      commodi consequatur? Sed ut perspiciatis unde omnis iste
+                      natus error sit voluptatem accusantium doloremque
+                      laudantium, totam rem aperiam, eaque ipsa quae ab illo
+                      inventore veritatis et quasi architecto beatae vitae dicta
+                      sunt explicabo.
+                    </p>
+
+                  </div>
+                </div>
               </div>
             </div>
-            <!-- End of col-sm-12 -->
           </div>
-          <!-- End of row -->
+          <!-- End of col-sm-12 -->
         </div>
-        <!-- End of Container -->
+        <!-- End of row -->
+      </div>
+      <!-- End of Container -->
+      <hr />
     </section>
+    <!-- End of about Section -->
 
 
     <!-- FOOTER -->
