--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
           </a>
 
           <!-- Nav -->
-          <nav>
+          <!-- <nav>
             <ul>
               <li><a href="#menu">Menu</a></li>
             </ul>
-          </nav>
+          </nav> -->
         </div>
       </header>
 
       <!-- Menu -->
-      <nav id="menu">
+      <!-- <nav id="menu">
         <h2>Menu</h2>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -46,189 +46,80 @@
           <li><a href="generic.html">Consequat dolor</a></li>
           <li><a href="elements.html">Elements</a></li>
         </ul>
-      </nav>
+      </nav> -->
 
       <!-- Main -->
       <div id="main">
         <div class="inner">
           <header>
-            <h1>
-              Twitter is broken.
-            </h1>
+            <h1>We need an alternative.</h1>
             <p>
-              Networking is an essential part of 
+              Networking is an essential part of science, and Twitter/X is no longer fit
+              for purpose.
             </p>
           </header>
-          <section class="tiles">
-            <article class="style1">
-              <span class="image">
-                <img src="images/pic01.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Magna</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style2">
-              <span class="image">
-                <img src="images/pic02.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Lorem</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style3">
-              <span class="image">
-                <img src="images/pic03.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Feugiat</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style4">
-              <span class="image">
-                <img src="images/pic04.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Tempus</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style5">
-              <span class="image">
-                <img src="images/pic05.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Aliquam</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style6">
-              <span class="image">
-                <img src="images/pic06.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Veroeros</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style2">
-              <span class="image">
-                <img src="images/pic07.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Ipsum</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style3">
-              <span class="image">
-                <img src="images/pic08.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Dolor</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style1">
-              <span class="image">
-                <img src="images/pic09.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Nullam</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style5">
-              <span class="image">
-                <img src="images/pic10.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Ultricies</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style6">
-              <span class="image">
-                <img src="images/pic11.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Dictum</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-            <article class="style4">
-              <span class="image">
-                <img src="images/pic12.jpg" alt="" />
-              </span>
-              <a href="generic.html">
-                <h2>Pretium</h2>
-                <div class="content">
-                  <p>
-                    Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et
-                    feugiat.
-                  </p>
-                </div>
-              </a>
-            </article>
-          </section>
+          <p>
+            We're building tools for Bluesky - an alternative, open-source social
+            network. This page tells you a bit about what we're up to.
+          </p>
+
+          <h2>Feeds</h2>
+          <p>
+            Anyone can host algorithms that show feeds of posts. We maintain feeds for
+            astronomy topics, like these ones:
+          </p>
+          <h3>
+            <a
+              href="https://bsky.app/profile/did:plc:jcoy7v3a2t4rcfdh6i4kza25/feed/astro"
+              >Astronomy</a
+            >
+          </h3>
+          <h3>
+            <a
+              href="https://bsky.app/profile/did:plc:jcoy7v3a2t4rcfdh6i4kza25/feed/astro"
+              >Astrophotography</a
+            >
+          </h3>
+          <h3>
+            <a
+              href="https://bsky.app/profile/did:plc:jcoy7v3a2t4rcfdh6i4kza25/feed/astro"
+              >Exoplanets</a
+            >
+          </h3>
+
+          <h2>Conference dashboards and support</h2>
+          <p>
+            Show Bluesky posts live at your conference. Use a dashboard like
+            <a href="https://emilyhunt.github.io/dotastronomy-live-feed/">this one</a>
+            we built for .Astronomy 13:
+          </p>
+          <img src="images/live-feed.png" width="50%" />
+          <p>We'd be happy to help set this up for you.</p>
+
+          <h2>Everything is open source</h2>
+          <p>
+            We can't lose essential online spaces again. Everything we do is open
+            source, and lives in
+            <a href="https://github.com/bluesky-astronomy">our GitHub organisation.</a>
+          </p>
+
+          <h2>What's Bluesky?</h2>
+          <p>
+            We're working on tools to improve onboarding. For now,
+            <a href="https://emilydoesastro.com/posts/230824-bluesky-signup/"
+              >this blog post</a
+            >
+            should give you a lot more information.
+          </p>
+
+          <!-- <bsky-embed
+            feed="at://did:plc:jcoy7v3a2t4rcfdh6i4kza25/app.bsky.feed.generator/astro"
+            mode=""
+            limit="3"
+            link-target="_blank"
+            link-image="false"
+          >
+		  </bsky-embed> -->
         </div>
       </div>
 
@@ -236,75 +127,26 @@
       <footer id="footer">
         <div class="inner">
           <section>
-            <h2>Get in touch</h2>
-            <form method="post" action="#">
-              <div class="fields">
-                <div class="field half">
-                  <input type="text" name="name" id="name" placeholder="Name" />
-                </div>
-                <div class="field half">
-                  <input type="email" name="email" id="email" placeholder="Email" />
-                </div>
-                <div class="field">
-                  <textarea
-                    name="message"
-                    id="message"
-                    placeholder="Message"
-                  ></textarea>
-                </div>
-              </div>
-              <ul class="actions">
-                <li><input type="submit" value="Send" class="primary" /></li>
-              </ul>
-            </form>
-          </section>
-          <section>
-            <h2>Follow</h2>
+            <h2>Find us online</h2>
             <ul class="icons">
               <li>
-                <a href="#" class="icon brands style2 fa-twitter"
-                  ><span class="label">Twitter</span></a
+                <a
+                  href="https://bsky.app/profile/did:plc:jcoy7v3a2t4rcfdh6i4kza25/feed/astro"
+                  class="icon style2 fa-square"
+                  ><span class="label">Bluesky</span></a
                 >
               </li>
               <li>
-                <a href="#" class="icon brands style2 fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-instagram"
-                  ><span class="label">Instagram</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-dribbble"
-                  ><span class="label">Dribbble</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-github"
+                <a
+                  href="https://github.com/bluesky-astronomy"
+                  class="icon brands style2 fa-github"
                   ><span class="label">GitHub</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands style2 fa-500px"
-                  ><span class="label">500px</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon solid style2 fa-phone"
-                  ><span class="label">Phone</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon solid style2 fa-envelope"
-                  ><span class="label">Email</span></a
                 >
               </li>
             </ul>
           </section>
           <ul class="copyright">
-            <li>&copy; Untitled. All rights reserved</li>
+            <li>&copy; Astronomy on Bluesky</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
           </ul>
         </div>
@@ -317,5 +159,9 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bsky-embed@0.1.4/dist/bsky-embed.es.js"
+      async
+    ></script>
   </body>
 </html>
